[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menus/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -37.3849
margin_bottom = 2.61511
expand = true
stretch_mode = 5

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -50.0
margin_right = 400.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 400, 55 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 261.456
margin_top = 460.196
margin_right = 719.456
margin_bottom = 500.196
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="MainMenu"]
margin_right = 458.0
margin_bottom = 20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MainMenu/Buttons"]
margin_right = 150.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0.501961 )
text = "START"
flat = true

[node name="OptionsButton" type="Button" parent="MainMenu/Buttons"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0.501961 )
text = "OPTIONS"
flat = true

[node name="ExitButton" type="Button" parent="MainMenu/Buttons"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0.501961 )
text = "EXIT"
flat = true

[node name="Options" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.0
margin_top = -72.0
margin_right = 161.0
margin_bottom = 72.0
custom_constants/separation = 30
alignment = 1

[node name="Label" type="Label" parent="Options"]
margin_right = 322.0
margin_bottom = 31.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "OPTIONS"
align = 1

[node name="Volume" type="HBoxContainer" parent="Options"]
margin_top = 61.0
margin_right = 322.0
margin_bottom = 92.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Options/Volume"]
margin_left = 54.0
margin_right = 147.0
margin_bottom = 31.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Volume:"
align = 2

[node name="Slider" type="HSlider" parent="Options/Volume"]
margin_left = 167.0
margin_right = 267.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
tick_count = 100
ticks_on_borders = true

[node name="Buttons" type="HBoxContainer" parent="Options"]
margin_top = 122.0
margin_right = 322.0
margin_bottom = 159.0
custom_constants/separation = 20
alignment = 1

[node name="ApplyButton" type="Button" parent="Options/Buttons"]
margin_left = 30.0
margin_right = 138.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 0.501961 )
text = "APPLY"
flat = true
align = 2

[node name="BackButton" type="Button" parent="Options/Buttons"]
margin_left = 158.0
margin_right = 292.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 0.501961 )
text = "CANCEL"
flat = true
